[gd_scene load_steps=8 format=3 uid="uid://cbefsipxb2dw8"]

[ext_resource type="Script" path="res://characters/player.gd" id="1_fpagb"]
[ext_resource type="Texture2D" uid="uid://dwnt674r6404p" path="res://assets/character_sprites/player_no_wing.png" id="2_m184p"]
[ext_resource type="Theme" uid="uid://bgq7gf52v0365" path="res://assets/theme/base_theme.tres" id="2_yl3jm"]
[ext_resource type="Texture2D" uid="uid://bfmqb81l2qxqb" path="res://assets/character_sprites/player.png" id="3_chepf"]
[ext_resource type="AudioStream" uid="uid://bce0gwu7cwrfy" path="res://assets/audio/run.ogg" id="3_uaog5"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0deo2"]
size = Vector2(119, 402)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ynq2q"]
size = Vector2(123, 402)

[node name="Player" type="CharacterBody2D" groups=["players"]]
z_index = 10
script = ExtResource("1_fpagb")

[node name="NoWing" type="TextureRect" parent="."]
offset_left = -183.0
offset_top = -64.0
offset_right = 370.0
offset_bottom = 456.0
texture = ExtResource("2_m184p")
expand_mode = 1

[node name="Wing" type="TextureRect" parent="."]
visible = false
offset_left = -183.0
offset_top = -64.0
offset_right = 370.0
offset_bottom = 456.0
texture = ExtResource("3_chepf")
expand_mode = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(95, 203)
shape = SubResource("RectangleShape2D_0deo2")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(96, 204)
shape = SubResource("RectangleShape2D_ynq2q")

[node name="HPBar" type="ProgressBar" parent="."]
visible = false
anchors_preset = 10
anchor_right = 1.0
offset_left = -37.5
offset_top = -50.0
offset_right = 162.5
offset_bottom = -23.0
grow_horizontal = 2
theme = ExtResource("2_yl3jm")
theme_type_variation = &"HPBar"
value = 100.0
show_percentage = false

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(100, 208)
scale = Vector2(5.9, 20.1)

[node name="JumpAudio" type="AudioStreamPlayer" parent="."]

[node name="RunAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_uaog5")

[node name="HitAudio" type="AudioStreamPlayer" parent="."]

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
